p   omiscid-ext-dev                 - OMiSCID Extension development files       
!!! is visible with omiscidgui using mdns but not using jive

test 55 failed once with avahi (connection refused exception)

---------------------------------
In this files, you will find changes between java OMiSCID versions.

1.6.???
r????
        fix:  possibility to start twice a service at the same time (now throw an exception)
        impr: automatically set property java.net.preferIPv4Stack to make jivedns/jmdns work without a network connection

1.6.0
r7694
        fix:  some unclosed threads with quite classical services
        fix:  service.xml reader ignoring some information due to JAXB and CastorXML difference in XSD handling
        fix:  bad handling of absent udp port or missing peers in received remote service description
        fix:  problem with ServiceProxy#getVariableType() returning null for a remote non-Java service
        fix:  problem with missing descriptions (connector description, variable description and type) requiring updateDescription
        fix:  (API) Service#getVariableAccessType now returns VariableAccessType instead of string
        impr: removed delay on service stop() that was introduced a long time a go o help oscar bundle reload
        impr: omiscid is available using maven2 (currently in the repository: http://www-prima.imag.fr/maven)
        impr: dnssd server/proxy now fully operational (useful on networks where multicast is filtered)
        impr: (internal) added a class to expose some internal (possible future-API) details used for instance in the GUI
        impr: added higher verbosity for the automatic selection DNSSD implementation (by setting environment variable to DEBUG)

1.5.1
r6108
        fix:  race conditions causing deadlock on connection
        fix:  race conditions preventing notifications of service connections